--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,14 @@ html {
 	min-width: 50%;
 	min-height: 50%;
 }
+
+@page {
+    size: A4;
+    margin: 60px 50px;
+}
+@media print {
+    html, body {
+        width: 210mm;
+        height: 297mm;
+    }
+}
