--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,19 +22,19 @@ html {
 
 .fillbg {
 	z-index: -1;
-	position: fixed; 
-	top: -50%; 
-	left: -50%; 
-	width: 200%; 
+	position: fixed;
+	top: -50%;
+	left: -50%;
+	width: 200%;
 	height: 200%;
 }
 .fillbg img {
-	position: absolute; 
-	top: 0; 
-	left: 0; 
-	right: 0; 
-	bottom: 0; 
-	margin: auto; 
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
 	min-width: 50%;
 	min-height: 50%;
 }
@@ -48,4 +48,20 @@ html {
         width: 210mm;
         height: 297mm;
     }
+}
+
+.data-control {
+    margin-bottom: 30px;
+}
+
+.first-no td:first-child {
+    width: 50px;
+}
+
+.last-control td:last-child {
+    width: 100px;
+    text-align: center;
+}
+.last-control td:last-child .btn {
+    min-width: 25px;
 }
