--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,67 +1,54 @@
 html {
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-}
-
-.container {
-	background: transparent;
-}
+  font-family: "Trebuchet MS", Helvetica, sans-serif; }
 
 .container-error {
-	max-width: 740px;
-	padding-top: 50px;
-}
+  max-width: 740px;
+  padding-top: 50px; }
 
-.container-login {
-	width: 300px;
-	margin: 100px auto;
-}
+.container {
+  background: transparent; }
 
 .page-header {
-	margin-top: 0;
-}
-
-.fillbg {
-	z-index: -1;
-	position: fixed;
-	top: -50%;
-	left: -50%;
-	width: 200%;
-	height: 200%;
-}
-.fillbg img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	margin: auto;
-	min-width: 50%;
-	min-height: 50%;
-}
-
-@page {
-    size: A4;
-    margin: 60px 50px;
-}
-@media print {
-    html, body {
-        width: 210mm;
-        height: 297mm;
-    }
-}
+  margin-top: 0; }
 
 .data-control {
-    margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 
 .first-no td:first-child {
-    width: 50px;
-}
+  width: 50px; }
 
 .last-control td:last-child {
-    width: 100px;
-    text-align: center;
-}
-.last-control td:last-child .btn {
-    min-width: 25px;
-}
+  width: 100px;
+  text-align: center; }
+  .last-control td:last-child .btn {
+    min-width: 25px; }
+
+.container-login {
+  width: 300px;
+  margin: 100px auto; }
+
+.fillbg {
+  z-index: -1;
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%; }
+  .fillbg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%; }
+
+@page {
+  size: A4;
+  margin: 60px 50px; }
+
+@media print {
+  html, body {
+    width: 210mm;
+    height: 297mm; } }
